Adicionado Preview e hover nos itens de navegação da página

--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
           <li>About</li>
         </ul>
         <ul>
-          <li><i data-feather="shopping-bag"></i></li>
-          <li><i data-feather="search"></i></li>
-          <li><i data-feather="user"></i></li>
+          <li  class="nav_icons"><i data-feather="shopping-bag"></i></li>
+          <li  class="nav_icons"><i data-feather="search"></i></li>
+          <li  class="nav_icons"><i data-feather="user"></i></li>
         </ul>
       </nav>
 
       <div class="content">
         <div class="social-media">
-          <i data-feather="instagram"></i>
-          <i data-feather="facebook"></i>
-          <i data-feather="twitter"></i>
+          <i data-feather="instagram" class="nav_leftbar"></i>
+          <i data-feather="facebook" class="nav_leftbar"></i>
+          <i data-feather="twitter" class="nav_leftbar"></i>
         </div>
         <div class="content-text left">
           <h3>THE BEST OF THE COURT</h3>
